Uso de DTOs em Cidade.